added DistAuth test